<resources>
    <string name="app_name">Trip Planner</string>
    <string name="hint_login">Login</string>
    <string name="hint_enter_username">Username</string>
    <string name="val_enter_username">Enter valid Username</string>
    <string name="hint_enter_password">Password</string>
    <string name="val_enter_password">Enter valid Password</string>
    <string name="hint_signup">Signup</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="val_confirm_password">Confirm Password does not match</string>
    <string name="title_fav">Favourites</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="settings">SETTINGS</string>
    <string name="loading">Loading&#8230;</string>
    <string name="share">Share</string>
    <string name="title_home">Home</string>
    <string name="alert_no_connection">Check your internet connection</string>
    <string name="alert">Alert</string>
    <string name="str_delete_trip">Are you sure want to delete this Trip?</string>

    <string-array name="category">
        <item>Family</item>
        <item>Friends</item>
        <item>Business</item>
    </string-array>
</resources>
