<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginModel"
            type="com.hlabexamples.commonmvp.data.LoginModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            app:cardElevation="4dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1">

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_enter_username"
                        android:inputType="text"
                        android:text="@={loginModel.username}"
                        android:textColorHint="@color/colorTitleLight" /><!--Tow-way binding-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_enter_password"
                        android:inputType="textPassword"
                        android:text="@={loginModel.password}"
                        android:textColorHint="@color/colorTitleLight" /><!--Tow-way binding-->
                </android.support.design.widget.TextInputLayout>

                <!--Event Binding : Method reference-->
                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{listener::onClick}"
                    android:text="@string/hint_login"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1" />

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{listener::onClick}"
                    android:padding="5dp"
                    android:text="@string/hint_signup"
                    android:textColor="@color/colorTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <!--Listener Binding-->
                <!--android:onClick="@{() -> presenter.performLogin()}"-->

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="OR"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonSize="wide" />


    </LinearLayout>
</layout>